qt/gen_qgraphicssceneevent.nim

proc fcQGraphicsSceneDragDropEvent_setScreenPos(self: pointer, pos: pointer): void {.importc: "QGraphicsSceneDragDropEvent_setScreenPos".}
proc fcQGraphicsSceneDragDropEvent_buttons(self: pointer, ): cint {.importc: "QGraphicsSceneDragDropEvent_buttons".}
proc fcQGraphicsSceneDragDropEvent_setButtons(self: pointer, buttons: cint): void {.importc: "QGraphicsSceneDragDropEvent_setButtons".}
proc fcQGraphicsSceneDragDropEvent_modifiers(self: pointer, ): cint {.importc: "QGraphicsSceneDragDropEvent_modifiers".}
proc fcQGraphicsSceneDragDropEvent_setModifiers(self: pointer, modifiers: cint): void {.importc: "QGraphicsSceneDragDropEvent_setModifiers".}
proc fcQGraphicsSceneDragDropEvent_possibleActions(self: pointer, ): cint {.importc: "QGraphicsSceneDragDropEvent_possibleActions".}
proc fcQGraphicsSceneDragDropEvent_setPossibleActions(self: pointer, actions: cint): void {.importc: "QGraphicsSceneDragDropEvent_setPossibleActions".}
proc fcQGraphicsSceneDragDropEvent_proposedAction(self: pointer, ): cint {.importc: "QGraphicsSceneDragDropEvent_proposedAction".}
proc fcQGraphicsSceneDragDropEvent_setProposedAction(self: pointer, action: cint): void {.importc: "QGraphicsSceneDragDropEvent_setProposedAction".}
proc fcQGraphicsSceneDragDropEvent_acceptProposedAction(self: pointer, ): void {.importc: "QGraphicsSceneDragDropEvent_acceptProposedAction".}
proc fcQGraphicsSceneDragDropEvent_dropAction(self: pointer, ): cint {.importc: "QGraphicsSceneDragDropEvent_dropAction".}
proc fcQGraphicsSceneDragDropEvent_setDropAction(self: pointer, action: cint): void {.importc: "QGraphicsSceneDragDropEvent_setDropAction".}
proc fcQGraphicsSceneDragDropEvent_source(self: pointer, ): pointer {.importc: "QGraphicsSceneDragDropEvent_source".}
proc fcQGraphicsSceneDragDropEvent_setSource(self: pointer, source: pointer): void {.importc: "QGraphicsSceneDragDropEvent_setSource".}
proc fcQGraphicsSceneDragDropEvent_mimeData(self: pointer, ): pointer {.importc: "QGraphicsSceneDragDropEvent_mimeData".}
proc fcQGraphicsSceneDragDropEvent_setMimeData(self: pointer, data: pointer): void {.importc: "QGraphicsSceneDragDropEvent_setMimeData".}
proc fcQGraphicsSceneDragDropEvent_delete(self: pointer) {.importc: "QGraphicsSceneDragDropEvent_delete".}
proc fcQGraphicsSceneResizeEvent_new(): ptr cQGraphicsSceneResizeEvent {.importc: "QGraphicsSceneResizeEvent_new".}
proc fcQGraphicsSceneResizeEvent_oldSize(self: pointer, ): pointer {.importc: "QGraphicsSceneResizeEvent_oldSize".}
proc fcQGraphicsSceneResizeEvent_setOldSize(self: pointer, size: pointer): void {.importc: "QGraphicsSceneResizeEvent_setOldSize".}
proc fcQGraphicsSceneResizeEvent_newSize(self: pointer, ): pointer {.importc: "QGraphicsSceneResizeEvent_newSize".}
proc fcQGraphicsSceneResizeEvent_setNewSize(self: pointer, size: pointer): void {.importc: "QGraphicsSceneResizeEvent_setNewSize".}
proc fcQGraphicsSceneResizeEvent_delete(self: pointer) {.importc: "QGraphicsSceneResizeEvent_delete".}
proc fcQGraphicsSceneMoveEvent_new(): ptr cQGraphicsSceneMoveEvent {.importc: "QGraphicsSceneMoveEvent_new".}
proc fcQGraphicsSceneMoveEvent_oldPos(self: pointer, ): pointer {.importc: "QGraphicsSceneMoveEvent_oldPos".}
proc fcQGraphicsSceneMoveEvent_setOldPos(self: pointer, pos: pointer): void {.importc: "QGraphicsSceneMoveEvent_setOldPos".}
proc fcQGraphicsSceneMoveEvent_newPos(self: pointer, ): pointer {.importc: "QGraphicsSceneMoveEvent_newPos".}
proc fcQGraphicsSceneMoveEvent_setNewPos(self: pointer, pos: pointer): void {.importc: "QGraphicsSceneMoveEvent_setNewPos".}
proc fcQGraphicsSceneMoveEvent_delete(self: pointer) {.importc: "QGraphicsSceneMoveEvent_delete".}


func init*(T: type QGraphicsSceneEvent, h: ptr cQGraphicsSceneEvent): QGraphicsSceneEvent =
  T(h: h)
proc create*(T: type QGraphicsSceneEvent, typeVal: gen_qcoreevent.QEventType): QGraphicsSceneEvent =

  QGraphicsSceneEvent.init(fcQGraphicsSceneEvent_new(cint(typeVal)))
proc widget*(self: QGraphicsSceneEvent, ): gen_qwidget.QWidget =

  gen_qwidget.QWidget(h: fcQGraphicsSceneEvent_widget(self.h))

proc setWidget*(self: QGraphicsSceneEvent, widget: gen_qwidget.QWidget): void =

  fcQGraphicsSceneEvent_setWidget(self.h, widget.h)

proc delete*(self: QGraphicsSceneEvent) =
  fcQGraphicsSceneEvent_delete(self.h)

func init*(T: type QGraphicsSceneMouseEvent, h: ptr cQGraphicsSceneMouseEvent): QGraphicsSceneMouseEvent =
  T(h: h)
proc create*(T: type QGraphicsSceneMouseEvent, ): QGraphicsSceneMouseEvent =

  QGraphicsSceneMouseEvent.init(fcQGraphicsSceneMouseEvent_new())
proc create*(T: type QGraphicsSceneMouseEvent, typeVal: gen_qcoreevent.QEventType): QGraphicsSceneMouseEvent =

  QGraphicsSceneMouseEvent.init(fcQGraphicsSceneMouseEvent_new2(cint(typeVal)))
proc pos*(self: QGraphicsSceneMouseEvent, ): gen_qpoint.QPointF =

  gen_qpoint.QPointF(h: fcQGraphicsSceneMouseEvent_pos(self.h))

proc setPos*(self: QGraphicsSceneMouseEvent, pos: gen_qpoint.QPointF): void =

  fcQGraphicsSceneMouseEvent_setPos(self.h, pos.h)

proc scenePos*(self: QGraphicsSceneMouseEvent, ): gen_qpoint.QPointF =

  gen_qpoint.QPointF(h: fcQGraphicsSceneMouseEvent_scenePos(self.h))

proc setScenePos*(self: QGraphicsSceneMouseEvent, pos: gen_qpoint.QPointF): void =

  fcQGraphicsSceneMouseEvent_setScenePos(self.h, pos.h)

proc screenPos*(self: QGraphicsSceneMouseEvent, ): gen_qpoint.QPoint =

  gen_qpoint.QPoint(h: fcQGraphicsSceneMouseEvent_screenPos(self.h))

proc setScreenPos*(self: QGraphicsSceneMouseEvent, pos: gen_qpoint.QPoint): void =

  fcQGraphicsSceneMouseEvent_setScreenPos(self.h, pos.h)

proc buttonDownPos*(self: QGraphicsSceneMouseEvent, button: gen_qnamespace.MouseButton): gen_qpoint.QPointF =

  gen_qpoint.QPointF(h: fcQGraphicsSceneMouseEvent_buttonDownPos(self.h, cint(button)))

proc setButtonDownPos*(self: QGraphicsSceneMouseEvent, button: gen_qnamespace.MouseButton, pos: gen_qpoint.QPointF): void =

  fcQGraphicsSceneMouseEvent_setButtonDownPos(self.h, cint(button), pos.h)

proc buttonDownScenePos*(self: QGraphicsSceneMouseEvent, button: gen_qnamespace.MouseButton): gen_qpoint.QPointF =

  gen_qpoint.QPointF(h: fcQGraphicsSceneMouseEvent_buttonDownScenePos(self.h, cint(button)))

proc setButtonDownScenePos*(self: QGraphicsSceneMouseEvent, button: gen_qnamespace.MouseButton, pos: gen_qpoint.QPointF): void =

  fcQGraphicsSceneMouseEvent_setButtonDownScenePos(self.h, cint(button), pos.h)

proc buttonDownScreenPos*(self: QGraphicsSceneMouseEvent, button: gen_qnamespace.MouseButton): gen_qpoint.QPoint =

  gen_qpoint.QPoint(h: fcQGraphicsSceneMouseEvent_buttonDownScreenPos(self.h, cint(button)))

proc setButtonDownScreenPos*(self: QGraphicsSceneMouseEvent, button: gen_qnamespace.MouseButton, pos: gen_qpoint.QPoint): void =

  fcQGraphicsSceneMouseEvent_setButtonDownScreenPos(self.h, cint(button), pos.h)

proc lastPos*(self: QGraphicsSceneMouseEvent, ): gen_qpoint.QPointF =

  gen_qpoint.QPointF(h: fcQGraphicsSceneMouseEvent_lastPos(self.h))

proc setLastPos*(self: QGraphicsSceneMouseEvent, pos: gen_qpoint.QPointF): void =

  fcQGraphicsSceneMouseEvent_setLastPos(self.h, pos.h)

proc lastScenePos*(self: QGraphicsSceneMouseEvent, ): gen_qpoint.QPointF =

  gen_qpoint.QPointF(h: fcQGraphicsSceneMouseEvent_lastScenePos(self.h))

proc setLastScenePos*(self: QGraphicsSceneMouseEvent, pos: gen_qpoint.QPointF): void =

  fcQGraphicsSceneMouseEvent_setLastScenePos(self.h, pos.h)

proc lastScreenPos*(self: QGraphicsSceneMouseEvent, ): gen_qpoint.QPoint =

  gen_qpoint.QPoint(h: fcQGraphicsSceneMouseEvent_lastScreenPos(self.h))

proc setLastScreenPos*(self: QGraphicsSceneMouseEvent, pos: gen_qpoint.QPoint): void =

  fcQGraphicsSceneMouseEvent_setLastScreenPos(self.h, pos.h)

proc buttons*(self: QGraphicsSceneMouseEvent, ): gen_qnamespace.MouseButton =

  gen_qnamespace.MouseButton(fcQGraphicsSceneMouseEvent_buttons(self.h))

proc setButtons*(self: QGraphicsSceneMouseEvent, buttons: gen_qnamespace.MouseButton): void =

  fcQGraphicsSceneMouseEvent_setButtons(self.h, cint(buttons))

proc button*(self: QGraphicsSceneMouseEvent, ): gen_qnamespace.MouseButton =

  gen_qnamespace.MouseButton(fcQGraphicsSceneMouseEvent_button(self.h))

proc setButton*(self: QGraphicsSceneMouseEvent, button: gen_qnamespace.MouseButton): void =

  fcQGraphicsSceneMouseEvent_setButton(self.h, cint(button))

proc modifiers*(self: QGraphicsSceneMouseEvent, ): gen_qnamespace.KeyboardModifier =

  gen_qnamespace.KeyboardModifier(fcQGraphicsSceneMouseEvent_modifiers(self.h))

proc setModifiers*(self: QGraphicsSceneMouseEvent, modifiers: gen_qnamespace.KeyboardModifier): void =

  fcQGraphicsSceneMouseEvent_setModifiers(self.h, cint(modifiers))

proc source*(self: QGraphicsSceneMouseEvent, ): gen_qnamespace.MouseEventSource =

  gen_qnamespace.MouseEventSource(fcQGraphicsSceneMouseEvent_source(self.h))

proc setSource*(self: QGraphicsSceneMouseEvent, source: gen_qnamespace.MouseEventSource): void =

  fcQGraphicsSceneMouseEvent_setSource(self.h, cint(source))

proc flags*(self: QGraphicsSceneMouseEvent, ): gen_qnamespace.MouseEventFlag =

  gen_qnamespace.MouseEventFlag(fcQGraphicsSceneMouseEvent_flags(self.h))

proc setFlags*(self: QGraphicsSceneMouseEvent, flags: gen_qnamespace.MouseEventFlag): void =

  fcQGraphicsSceneMouseEvent_setFlags(self.h, cint(flags))

proc delete*(self: QGraphicsSceneMouseEvent) =
  fcQGraphicsSceneMouseEvent_delete(self.h)

func init*(T: type QGraphicsSceneWheelEvent, h: ptr cQGraphicsSceneWheelEvent): QGraphicsSceneWheelEvent =
  T(h: h)
proc create*(T: type QGraphicsSceneWheelEvent, ): QGraphicsSceneWheelEvent =

  QGraphicsSceneWheelEvent.init(fcQGraphicsSceneWheelEvent_new())
proc create*(T: type QGraphicsSceneWheelEvent, typeVal: gen_qcoreevent.QEventType): QGraphicsSceneWheelEvent =

  QGraphicsSceneWheelEvent.init(fcQGraphicsSceneWheelEvent_new2(cint(typeVal)))
proc pos*(self: QGraphicsSceneWheelEvent, ): gen_qpoint.QPointF =

  gen_qpoint.QPointF(h: fcQGraphicsSceneWheelEvent_pos(self.h))

proc setPos*(self: QGraphicsSceneWheelEvent, pos: gen_qpoint.QPointF): void =

  fcQGraphicsSceneWheelEvent_setPos(self.h, pos.h)

proc scenePos*(self: QGraphicsSceneWheelEvent, ): gen_qpoint.QPointF =

  gen_qpoint.QPointF(h: fcQGraphicsSceneWheelEvent_scenePos(self.h))

proc setScenePos*(self: QGraphicsSceneWheelEvent, pos: gen_qpoint.QPointF): void =

  fcQGraphicsSceneWheelEvent_setScenePos(self.h, pos.h)

proc screenPos*(self: QGraphicsSceneWheelEvent, ): gen_qpoint.QPoint =

  gen_qpoint.QPoint(h: fcQGraphicsSceneWheelEvent_screenPos(self.h))

proc setScreenPos*(self: QGraphicsSceneWheelEvent, pos: gen_qpoint.QPoint): void =

  fcQGraphicsSceneWheelEvent_setScreenPos(self.h, pos.h)

proc buttons*(self: QGraphicsSceneWheelEvent, ): gen_qnamespace.MouseButton =

  gen_qnamespace.MouseButton(fcQGraphicsSceneWheelEvent_buttons(self.h))

proc setButtons*(self: QGraphicsSceneWheelEvent, buttons: gen_qnamespace.MouseButton): void =

  fcQGraphicsSceneWheelEvent_setButtons(self.h, cint(buttons))

proc modifiers*(self: QGraphicsSceneWheelEvent, ): gen_qnamespace.KeyboardModifier =

  gen_qnamespace.KeyboardModifier(fcQGraphicsSceneWheelEvent_modifiers(self.h))

proc setModifiers*(self: QGraphicsSceneWheelEvent, modifiers: gen_qnamespace.KeyboardModifier): void =

  fcQGraphicsSceneWheelEvent_setModifiers(self.h, cint(modifiers))

proc delta*(self: QGraphicsSceneWheelEvent, ): cint =

  fcQGraphicsSceneWheelEvent_delta(self.h)

proc setDelta*(self: QGraphicsSceneWheelEvent, delta: cint): void =

  fcQGraphicsSceneWheelEvent_setDelta(self.h, delta)

proc orientation*(self: QGraphicsSceneWheelEvent, ): gen_qnamespace.Orientation =

  gen_qnamespace.Orientation(fcQGraphicsSceneWheelEvent_orientation(self.h))

proc setOrientation*(self: QGraphicsSceneWheelEvent, orientation: gen_qnamespace.Orientation): void =

  fcQGraphicsSceneWheelEvent_setOrientation(self.h, cint(orientation))

proc delete*(self: QGraphicsSceneWheelEvent) =
  fcQGraphicsSceneWheelEvent_delete(self.h)
